[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/pill.png" type="Texture" id=1]
[ext_resource path="res://WinkingLight.gd" type="Script" id=2]

[node name="WinkingLight" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.929412, 0.917647, 0.0392157, 1 )
self_modulate = Color( 0.976471, 0.972549, 0.952941, 1 )
texture = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.25

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
